[package]
name = "sap_auto_runner"
version = "0.2.2"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Windows-only Rust CLI for running SAP auto extractor and uploading results"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls", "cookies"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
base64 = "0.21"
glob = "0.3"
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
encoding_rs = "0.8"
dialoguer = "0.11"
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
